Fix application layout bug and switch submit button positions

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,6 +31,30 @@
 // Example:
 // @linkColor: #ff0000;
 
+/* Application */
+
+html {
+  overflow: auto;
+}
+
+body {
+  padding-top: 60px;
+}
+
+section {
+  overflow: auto;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.center {
+  text-align: center;
+  h1 {
+    margin-bottom: 10px;
+  }
+}
 
 /* Navbar */
 .navbar-inner .brand {
@@ -42,6 +66,7 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #DDD;
+  clear: both;
   ul {
     float: left;
     list-style: none;
@@ -50,6 +75,18 @@ footer {
       margin-left: 60px;
     }
   }
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+input {
+  height: auto !important;
 }
 
 /* Form autocompletion */
@@ -79,5 +116,4 @@ ul.ui-autocomplete {
   float: left;
   width: 100%;
   margin-top: 45px;
-  @include box_sizing;
 }
